fix materialize tabs overflow bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,3 +34,8 @@ main > .hidden {
 #search {
     color: initial;
 }
+
+/* materialize fix */
+.tabs {
+    overflow: hidden;
+}
